testsuite/tests/partial-sigs/should_compile/ExtraNumAMROn.hs
{-# LANGUAGE PartialTypeSignatures #-}
module ExtraNumAMROn where

foo :: _ => a
foo = 3
