testsuite/tests/partial-sigs/should_fail/WildcardInDefaultSignature.hs
{-# LANGUAGE DefaultSignatures #-}
module WildcardInDefaultSignature where

class C a where default f :: _
